--- a/WaterLevel_FrontEnd/Frontend/src/App.css
+++ b/WaterLevel_FrontEnd/Frontend/src/App.css
@@ -1,42 +1,62 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+.container{
+
+border: black;
+background-color: #D9D9D9;
+  text-align:left;
+  width: 200px;
+  height: 1000px;
+  margin: 2px;
+  padding: 5px;
+
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.container .show-sidebar{
+  padding: 15px;
+  text-align: left;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.container .show-sidebar .sidebarhome{
+
+  background-color:#90B6E7;
+  padding: 15px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.container .show-sidebar .sidebardashboard{
+
+  background-color:#90B6E7;
+  padding: 15px;
+
 }
 
-.card {
-  padding: 2em;
+.container .show-sidebar .sidebaralerts{
+  background-color:#90B6E7;
+  padding: 15px;
+
 }
 
-.read-the-docs {
-  color: #888;
+.container .show-sidebar .sidebarpayments{
+
+  background-color:#90B6E7;
+  padding: 15px;
+
+
 }
+
+
+.container .show-sidebar .sidebarconfig{
+
+
+  background-color:#90B6E7;
+  padding: 15px;
+
+}
+
+
+.container .show-sidebar .sidebarcontact{
+
+  background-color:#90B6E7;
+  padding: 15px;
+}
+
+
+
