--- a/WaterLevel_FrontEnd/Frontend/src/App.css
+++ b/WaterLevel_FrontEnd/Frontend/src/App.css
@@ -1,4 +1,4 @@
-.container{
+.sidebarcontainer{
 
 border: black;
 background-color: #D9D9D9;
@@ -7,56 +7,29 @@ background-color: #D9D9D9;
   height: 1000px;
   margin: 2px;
   padding: 5px;
+  position: fixed;
+  left: 0;
+  top: 0;
 
 }
 
-.container .show-sidebar{
+.sidebarcontainer .show-sidebar{
   padding: 15px;
   text-align: left;
 }
 
-.container .show-sidebar .sidebarhome{
 
-  background-color:#90B6E7;
+.sidebarcontainer .show-sidebar ol{
+
+  list-style-type: none;
   padding: 15px;
-}
-
-.container .show-sidebar .sidebardashboard{
-
+  margin: 0;
+  text-align: center;
+  font-size: 15px;
+  font-family: AppleGothic;
   background-color:#90B6E7;
-  padding: 15px;
-
+  border-radius: 5px;
+  line-height: 12px;
+  margin-bottom: 10px;
+  width: 89%;
 }
-
-.container .show-sidebar .sidebaralerts{
-  background-color:#90B6E7;
-  padding: 15px;
-
-}
-
-.container .show-sidebar .sidebarpayments{
-
-  background-color:#90B6E7;
-  padding: 15px;
-
-
-}
-
-
-.container .show-sidebar .sidebarconfig{
-
-
-  background-color:#90B6E7;
-  padding: 15px;
-
-}
-
-
-.container .show-sidebar .sidebarcontact{
-
-  background-color:#90B6E7;
-  padding: 15px;
-}
-
-
-
