--- a/WaterLevel_FrontEnd/Frontend/src/sintex.css
+++ b/WaterLevel_FrontEnd/Frontend/src/sintex.css
@@ -1,11 +1,98 @@
+
+.container{
+
+    text-align: center;
+    position: relative;
+    left: 220px;
+    top: 0;
+    display: grid;
+    grid-template-columns: 480px 480px;
+
+
+}
+
 .sintex{
 
     background-color: #D9D9D9;
     width: 457px;
     height: 199px;
-    position: relative;
-    left: 215px;
-    top: 230px;
+    text-align: center;
+    font-size: 10px;
 
+
+
+
+}
+
+.Sump{
+
+    background-color: #D9D9D9;
+    width: 457px;
+    height: 199px;
+    text-align: center;
+    font-size: 10px;
+
+}
+
+.tank{
+
+    background-color: #90B6E7;
+    width: 100px;
+    height: 140px;
+    position: relative;
+    left: 40px;
+    top: -5px;
+    text-align: center;
+    border-color: black;
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 30px;
+    padding: 1px;
+
+
+}
+
+
+.sumptank{
+
+    background-color: #90B6E7;
+    width: 250px;
+    height: 140px;
+    position: relative;
+    left: 40px;
+    top: 0px;
+    text-align: center;
+    border-color: black;
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 5px;
+    padding: 1px;
+
+
+
+}
+
+.imgtank{
+
+    height: 185px;
+    width: 146px;
+    left: 19px;
+    top: 18px;
+    position: absolute;
+
+
+}
+
+table{
+    width: 20%;
+    position: absolute;
+    left: 200px;
+    top: 50px;
+}
+
+table tr td{
+border: 1px solid black;
+    padding: 10px;
+    width: 5px;
 
 }
